# kaltracker

./: CMakeLists.txt  KalTrackerEnvDev.db  README.md  click_build.sh  clickable.json  clickable.yaml  kaltracker-main.sh  kaltracker.apparmor  kaltracker.desktop.in  main.cpp  manifest.json.in  push-apparmor.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build.yml
assets/: README.md
internetchecker/: internetchecker.cpp  internetchecker.h
js/: AppVersion.js  BloodPressureIndex.js  BodyMassIndex.js  ControlBarCodeInfo.js  ControlCreateStorage.js  ControlDateNavigationPopup.js  ControlFoodsNutriscore.js  ControlFoodsSearchTimer.js  ControlIconUpAnimation.js  ControlIngestionStoredDialog.js  ControlNOVAGroups.js  ControlRecommendedCalories.js  ControlSetActivitySelection.js  ControlSetAge.js  ControlSetHeight.js  ControlSetPlanNextButton.js  ControlSetPlanSelection.js  ControlSetSexSelection.js  ControlSetWeight.js  ControlSlotDashboardPlan.js  DefineGoalCalories.js  DefineMacroNutriensPerDay.js  GetData.js  IdealWeight.js  IngestionsTable.js  KaltrackerUtils.js  NotesTable.js  RecommendedCalories.js  Regex.js  Storage.js  ThemeColors.js  Token.js  UpdateUserTable.js  UserFoodsListTable.js  UserTable.js  WaterDrinkCalc.js  WaterTrackerTable.js  WeightTrackerTable.js
po/: fr.po  kaltracker.ivoxavier.pot  nl.po  pt.po  pt_PT.po
py/: backup_restore.py  export_data.py  glob.py  sql_statements.py  streams.py
qml/: About.qml  AppLayoutPage.qml  AppSettings.qml  AverageCaloriesPage.qml  BackupRestorePage.qml  BodyMeasuresPage.qml  CMakeLists.txt  CreateStoragePage.qml  DataAnalysisPage.qml  DeleteTodayIngestionPage.qml  ExportDataPage.qml  GraphsPage.qml  HeightWeight.qml  HomePage.qml  ListFoodsIngestedMonthPage.qml  LogInPage.qml  Main.qml  ManageDataPage.qml  ManageUserFoodsListPage.qml  MenuPage.qml  NotesPage.qml  OnlineSourcesPage.qml  PlanActivity.qml  QuickAdditionPage.qml  QuickListFoodsPage.qml  ScanPage.qml  ScanPageBackUp.qml  SetActivityPage.qml  SetAgePage.qml  SetFoodPage.qml  SetHeightPage.qml  SetPlanPage.qml  SetSexAtBirthPage.qml  SetWeightPage.qml  Settings.qml  SettingsPage.qml  SexAge.qml  ThirdPartySoftwarePage.qml  TrackersSettingsPage.qml  UpdateUserValuesPage.qml  (+2 more)
qml/Components/: AdviceIndexexDialog.qml  AverageCaloriesMonthPage.qml  ChooseListPopoverDialog.qml  ConfigUserProfilePage.qml  ConsumeHabitsPage.qml  CreateTablesDialog.qml  CreateUserListPage.qml  DashBoard.qml  DeleteMonthDBPop.qml  EditUserProfileDialog.qml  ExportDataPage.qml  FoodsTemplate.qml  HelpUserConfigDialog.qml  IndexesCalcPage.qml  MaintenancePage.qml  ManualIngestioPage.qml  ManualIngestionPage.qml  NewIngestion.qml  OpenFoodsFactsListPage.qml  Records.qml  RemoveDataDialog.qml  RemoveRecordsDialog.qml  ResumePage.qml  SaveDataDialog.qml  SaveIngestion.qml  ScheduleIngestionPage.qml  SettingsPage.qml  StatsPage.qml  UpdateIngestionTimePop.qml  UpdateUserDetailsDialog.qml  UserAccountPage.qml  UserAccountPageBACK.qml  UserFoodsListEditPage.qml  UserListIngestionPage.qml  WelcomePage.qml
qml/components/: AddNoteDialog.qml  BackgroundStyle.qml  BackupRestoreNotifyPop.qml  BlankSpace.qml  CaloriesCircleChart.qml  CompletationBar.qml  ConfirmPicker.qml  DateNavigation.qml  DeleteAllNotesDialog.qml  DeleteAllWaterDialog.qml  DeleteAllWeightTrackerDialog.qml  DeleteByMonthPop.qml  DeleteCacheDialog.qml  GoalDefinitionDialog.qml  IconButton.qml  IsProductFoundDialog.qml  JSONListModel.qml  ListItemHeader.qml  ListViewFoods.qml  MealFilterDialog.qml  MessageDialog.qml  NavigationBar.qml  NotesList.qml  NotificationPop.qml  NotifyAutoCleanPop.qml  NutrientBar.qml  NutrientIcon.qml  NutrientSlider.qml  OperationResultPopOver.qml  QChartJs.qml  QuantitySpinner.qml  RecommendedCaloriesDialog.qml  RemoveRecordsDialog.qml  RowAbstractBarcodeButton.qml  RowAbstractConfirmButton.qml  RowAbstractQuickAdditionButton.qml  RowAbstractScanButton.qml  RowAbstractUpdateBloodPressureButton.qml  RowAbstractUpdateButton.qml  SizePicker.qml  (+23 more)
qml/controlSemaphores/: CMakeLists.txt  ControlSemaphores.qml
qml/controlStreams/: ControlStreams.qml
qml/js/: AwarenessAnalysis.js  Bmi.js  DataBase.js  DataBaseTools.js  DataBaseToolsBackUp.js  Ibw.js  Imc.js  Quotes.js  SpentTimeOnApp.js  UpdateDB.js  UserFoodsListDB.js  ValidationTools.js
qml/pages/: BackupRestorePage.qml  (+21 more)
streams/: streams.cpp  streams.h
(+35 files in other folders)
